[gd_scene load_steps=21 format=4 uid="uid://duwqj3gsclkbn"]

[ext_resource type="Script" path="res://script/Portal.gd" id="1_5d84p"]
[ext_resource type="TileSet" uid="uid://bke84gx6pjh43" path="res://tileset1.tres" id="2_7w2fx"]
[ext_resource type="PackedScene" uid="uid://bovex0mwcok7" path="res://scene/player.tscn" id="3_58nap"]
[ext_resource type="Texture2D" uid="uid://chuq1cqkystxj" path="res://art/objects/altar 224x288 - standing on grass.png" id="4_ilqeg"]
[ext_resource type="PackedScene" uid="uid://bce53l6xek7r3" path="res://scene/tutorial_npc.tscn" id="5_2g06u"]

[sub_resource type="Animation" id="Animation_fh1bk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ex204"]
resource_name = "transition"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_blcvl"]
resource_name = "transition_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsx1c"]
_data = {
"RESET": SubResource("Animation_fh1bk"),
"transition": SubResource("Animation_ex204"),
"transition_out": SubResource("Animation_blcvl")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_6mll7"]
atlas = ExtResource("4_ilqeg")
region = Rect2(0, 0, 224, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_vik4o"]
atlas = ExtResource("4_ilqeg")
region = Rect2(224, 0, 224, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_42s8o"]
atlas = ExtResource("4_ilqeg")
region = Rect2(448, 0, 224, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0728"]
atlas = ExtResource("4_ilqeg")
region = Rect2(672, 0, 224, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee1fj"]
atlas = ExtResource("4_ilqeg")
region = Rect2(896, 0, 224, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_umwg5"]
atlas = ExtResource("4_ilqeg")
region = Rect2(1120, 0, 224, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkhhy"]
atlas = ExtResource("4_ilqeg")
region = Rect2(1344, 0, 224, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vqei"]
atlas = ExtResource("4_ilqeg")
region = Rect2(1568, 0, 224, 288)

[sub_resource type="SpriteFrames" id="SpriteFrames_d4c7i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mll7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vik4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42s8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0728")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee1fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umwg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkhhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vqei")
}],
"loop": true,
"name": &"portal",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w1aok"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7kdr2"]
radius = 19.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_5d84p")
metadata/_edit_horizontal_guides_ = [0.0]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -3
tile_map_data = PackedByteArray("AAAXABQAAQAAAAAAAAAYABQAAQAAAAAAAAAZABQAAQAAAAAAAAAaABQAAQAAAAAAAAAbABQAAQAAAAAAAAAkABQAAQAAAAAAAAAjABQAAQAAAAAAAAAiABQAAQAAAAAAAAAhABQAAQAAAAAAAAAgABQAAQAAAAAAAAAfABQAAQAAAAAAAAAeABQAAQAAAAAAAAAdABQAAQAAAAAAAAAcABQAAQAAAAAAAAAkABMAAQAAAAAAAAAkABIAAQAAAAAAAAAkABEAAQAAAAAAAAAkABAAAQAAAAAAAAAkAA8AAQAAAAAAAAAkAA4AAQAAAAAAAAAkAA0AAQAAAAAAAAAkAAwAAQAAAAAAAAAkAAsAAQAAAAAAAAAkAAoAAQAAAAAAAAAkAAkAAQAAAAAAAAAkAAgAAQAAAAAAAAAkAAcAAQAAAAAAAAAkAAYAAQAAAAAAAAAkAAUAAQAAAAAAAAAkAAQAAQAAAAAAAAAkAAMAAQAAAAAAAAAkAAIAAQAAAAAAAAAkAAEAAQAAAAAAAAAkAAAAAQAAAAAAAAAjAAAAAQAAAAAAAAAiAAAAAQAAAAAAAAAhAAAAAQAAAAAAAAAgAAAAAQAAAAAAAAAfAAAAAQAAAAAAAAAeAAAAAQAAAAAAAAAdAAAAAQAAAAAAAAAcAAAAAQAAAAAAAAAbAAAAAQAAAAAAAAAaAAAAAQAAAAAAAAAZAAAAAwAaAAcAAAAYAAAAAAACAAEAAAAXAAAAAAACAAEAAAAWAAAAAAACAAEAAAAVAAAAAAABAAEAAAAUAAAAAQAAAAAAAAATAAAAAQAAAAAAAAASAAAAAQAAAAAAAAARAAAAAQAAAAAAAAAQAAAAAAADAAEAAAAPAAAAAAACAAEAAAAOAAAAAAACAAEAAAANAAAAAAACAAEAAAAMAAAAAwAYAAcAAAALAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAADAAAAAQAAAAAAAAACAAAAAQAAAAAAAAABAAAAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAcAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAAMAAEAAwAYAAcAAAAMAAIAAwAYAAcAAAAMAAMAAwAYAAcAAAAMAAQAAwAYAAgAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAcAAQAAAAAAAAANAAEAAAACAAEAAAANAAIAAAACAAEAAAANAAMAAAACAAEAAAANAAQAAwAaAAYAAAANAAUAAwAYAAcAAAANAAYAAwAYAAgAAAANAAcAAQAAAAAAAAAOAAEAAAACAAEAAAAOAAIAAAACAAEAAAAOAAMAAAACAAEAAAAOAAQAAAACAAEAAAAOAAUAAAACAAEAAAAOAAYAAwAZAAYAAAAOAAcAAQAAAAAAAAAPAAEAAAACAAEAAAAPAAIAAAACAAEAAAAPAAMAAAACAAEAAAAPAAQAAAACAAEAAAAPAAUAAAACAAEAAAAPAAYAAwAaAAYAAAAPAAcAAwAYAAcAAAAQAAEAAAADAAEAAAAQAAIAAAADAAEAAAAQAAMAAAADAAEAAAAQAAQAAAAEAAEAAAAQAAUAAAACAAEAAAAQAAYAAAACAAEAAAAQAAcAAAACAAEAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAAADAAAAAAARAAUAAAAEAAEAAAARAAYAAAACAAEAAAARAAcAAAACAAEAAAASAAEAAAACAAEAAAASAAIAAAACAAEAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAAACAAAAAAASAAYAAAACAAEAAAASAAcAAAACAAEAAAATAAEAAAACAAEAAAATAAIAAAACAAEAAAATAAMAAQAAAAAAAAATAAQAAQAAAAAAAAATAAUAAAACAAAAAAATAAYAAAACAAEAAAATAAcAAAACAAEAAAAUAAEAAQAAAAAAAAAUAAIAAQAAAAAAAAAUAAMAAQAAAAAAAAAUAAQAAAABAAAAAAAUAAUAAAAFAAEAAAAUAAYAAAACAAEAAAAUAAcAAAACAAEAAAAVAAEAAAABAAEAAAAVAAIAAAABAAEAAAAVAAMAAAABAAEAAAAVAAQAAAAFAAEAAAAVAAUAAAACAAEAAAAVAAYAAAACAAEAAAAVAAcAAAACAAEAAAAWAAEAAAACAAEAAAAWAAIAAAACAAEAAAAWAAMAAAACAAEAAAAWAAQAAAACAAEAAAAWAAUAAAACAAEAAAAWAAYAAwAYAAYAAAAWAAcAAwAYAAcAAAAXAAEAAAACAAEAAAAXAAIAAAACAAEAAAAXAAMAAAACAAEAAAAXAAQAAAACAAEAAAAXAAUAAAACAAEAAAAXAAYAAwAZAAYAAAAXAAgAAQAAAAAAAAAXAAkAAQAAAAAAAAAXAAoAAQAAAAAAAAAXAAsAAQAAAAAAAAAXAAwAAQAAAAAAAAAYAAEAAAACAAEAAAAYAAIAAAACAAEAAAAYAAMAAAACAAEAAAAYAAQAAwAYAAYAAAAYAAUAAwAaAAcAAAAYAAYAAwAaAAgAAAAYAAgAAQAAAAAAAAAYAAkAAQAAAAAAAAAYAAoAAQAAAAAAAAAYAAsAAQAAAAAAAAAYAA0AAQAAAAAAAAAYAA4AAQAAAAAAAAAYAA8AAQAAAAAAAAAYABAAAQAAAAAAAAAYABEAAQAAAAAAAAAYABIAAQAAAAAAAAAYABMAAQAAAAAAAAAZAAEAAwAaAAcAAAAZAAIAAwAaAAcAAAAZAAMAAwAaAAcAAAAZAAQAAwAaAAgAAAAZAAUAAQAAAAAAAAAZAAYAAQAAAAAAAAAZAAgAAQAAAAAAAAAZAAkAAQAAAAAAAAAZAAoAAQAAAAAAAAAZAAsAAQAAAAAAAAAZAAwAAQAAAAAAAAAZAA0AAQAAAAAAAAAZAA4AAQAAAAAAAAAZAA8AAQAAAAAAAAAZABAAAQAAAAAAAAAZABEAAQAAAAAAAAAZABIAAQAAAAAAAAAZABMAAQAAAAAAAAAaAAEAAQAAAAAAAAAaAAIAAQAAAAAAAAAaAAMAAQAAAAAAAAAaAAQAAQAAAAAAAAAaAAUAAQAAAAAAAAAaAAYAAQAAAAAAAAAaAAcAAQAAAAAAAAAaAAgAAQAAAAAAAAAaAAkAAQAAAAAAAAAaAAoAAQAAAAAAAAAaABEAAQAAAAAAAAAaABIAAQAAAAAAAAAaABMAAQAAAAAAAAAbAAEAAQAAAAAAAAAbAAIAAQAAAAAAAAAbAAMAAQAAAAAAAAAbAAQAAQAAAAAAAAAbAAUAAQAAAAAAAAAbAAYAAQAAAAAAAAAbAAcAAQAAAAAAAAAbAAoAAQAAAAAAAAAbAAsAAQAAAAAAAAAbAAwAAQAAAAAAAAAbAA0AAQAAAAAAAAAbAA4AAQAAAAAAAAAbAA8AAQAAAAAAAAAbABAAAQAAAAAAAAAbABEAAQAAAAAAAAAbABIAAQAAAAAAAAAbABMAAQAAAAAAAAAcAAEAAQAAAAAAAAAcAAIAAQAAAAAAAAAcAAMAAQAAAAAAAAAcAAQAAQAAAAAAAAAcAAUAAQAAAAAAAAAcAAYAAQAAAAAAAAAcAAcAAQAAAAAAAAAcAAgAAQAAAAAAAAAcAAsAAQAAAAAAAAAcAAwAAQAAAAAAAAAcAA0AAQAAAAAAAAAcAA4AAQAAAAAAAAAcAA8AAQAAAAAAAAAcABAAAQAAAAAAAAAcABEAAQAAAAAAAAAcABIAAQAAAAAAAAAcABMAAQAAAAAAAAAdAAEAAQAAAAAAAAAdAAIAAQAAAAAAAAAdAAMAAQAAAAAAAAAdAAQAAQAAAAAAAAAdAAUAAQAAAAAAAAAdAAYAAQAAAAAAAAAdAAcAAQAAAAAAAAAdAAgAAQAAAAAAAAAdAAkAAQAAAAAAAAAdAAwAAQAAAAAAAAAdAA0AAQAAAAAAAAAdAA4AAQAAAAAAAAAdAA8AAQAAAAAAAAAdABAAAQAAAAAAAAAdABEAAQAAAAAAAAAdABIAAQAAAAAAAAAdABMAAQAAAAAAAAAeAAEAAQAAAAAAAAAeAAIAAQAAAAAAAAAeAAMAAQAAAAAAAAAeAAQAAQAAAAAAAAAeAAUAAQAAAAAAAAAeAAYAAQAAAAAAAAAeAAcAAQAAAAAAAAAeAAgAAQAAAAAAAAAeAAkAAQAAAAAAAAAeAAoAAQAAAAAAAAAeAA4AAQAAAAAAAAAeAA8AAQAAAAAAAAAeABAAAQAAAAAAAAAeABEAAQAAAAAAAAAeABIAAQAAAAAAAAAeABMAAQAAAAAAAAAfAAEAAQAAAAAAAAAfAAIAAQAAAAAAAAAfAAMAAQAAAAAAAAAfAAQAAQAAAAAAAAAfAAUAAQAAAAAAAAAfAAYAAQAAAAAAAAAfAAcAAQAAAAAAAAAfAAgAAQAAAAAAAAAfAAkAAQAAAAAAAAAfAAoAAQAAAAAAAAAfAAsAAQAAAAAAAAAfAAwAAQAAAAAAAAAfAA4AAQAAAAAAAAAfAA8AAQAAAAAAAAAfABAAAQAAAAAAAAAfABEAAQAAAAAAAAAfABIAAQAAAAAAAAAfABMAAQAAAAAAAAAgAAEAAQAAAAAAAAAgAAIAAQAAAAAAAAAgAAMAAQAAAAAAAAAgAAQAAQAAAAAAAAAgAAUAAQAAAAAAAAAgAAYAAQAAAAAAAAAgAAcAAQAAAAAAAAAgAAgAAQAAAAAAAAAgAAkAAQAAAAAAAAAgAAoAAQAAAAAAAAAgAAsAAQAAAAAAAAAgAAwAAQAAAAAAAAAgAA0AAQAAAAAAAAAgAA8AAQAAAAAAAAAgABAAAQAAAAAAAAAgABEAAQAAAAAAAAAgABIAAQAAAAAAAAAgABMAAQAAAAAAAAAhAAEAAQAAAAAAAAAhAAIAAQAAAAAAAAAhAAMAAQAAAAAAAAAhAAQAAQAAAAAAAAAhAAUAAQAAAAAAAAAhAAYAAQAAAAAAAAAhAAcAAQAAAAAAAAAhAAgAAQAAAAAAAAAhAAkAAQAAAAAAAAAhAAoAAQAAAAAAAAAhAAsAAQAAAAAAAAAhAAwAAQAAAAAAAAAhAA0AAQAAAAAAAAAhABAAAQAAAAAAAAAhABEAAQAAAAAAAAAhABIAAQAAAAAAAAAhABMAAQAAAAAAAAAiAAEAAQAAAAAAAAAiAAIAAQAAAAAAAAAiAAMAAQAAAAAAAAAiAAQAAQAAAAAAAAAiAAUAAQAAAAAAAAAiAAYAAQAAAAAAAAAiAAcAAQAAAAAAAAAiAAgAAQAAAAAAAAAiAAkAAQAAAAAAAAAiAAoAAQAAAAAAAAAiAAsAAQAAAAAAAAAiAAwAAQAAAAAAAAAiAA0AAQAAAAAAAAAiAA4AAQAAAAAAAAAiAA8AAQAAAAAAAAAiABAAAQAAAAAAAAAiABEAAQAAAAAAAAAiABIAAQAAAAAAAAAiABMAAQAAAAAAAAAjAAEAAQAAAAAAAAAjAAIAAQAAAAAAAAAjAAMAAQAAAAAAAAAjAAQAAQAAAAAAAAAjAAUAAQAAAAAAAAAjAAYAAQAAAAAAAAAjAAcAAQAAAAAAAAAjAAgAAQAAAAAAAAAjAAkAAQAAAAAAAAAjAAoAAQAAAAAAAAAjAAsAAQAAAAAAAAAjAAwAAQAAAAAAAAAjAA0AAQAAAAAAAAAjAA4AAQAAAAAAAAAjAA8AAQAAAAAAAAAjABAAAQAAAAAAAAAjABEAAQAAAAAAAAAjABIAAQAAAAAAAAAjABMAAQAAAAAAAAAnAAMAAQAAAAAAAAAAAAYAAQAAAAAAAAAYAAwAAQAAAAAAAAAXAA0AAQAAAAAAAAAXAAcAAQAAAAAAAAAYAAcAAQAAAAAAAAAZAAcAAQAAAAAAAAAaABAAAQAAAAAAAAAaAA8AAQAAAAAAAAAaAA4AAQAAAAAAAAAaAA0AAQAAAAAAAAAaAAwAAQAAAAAAAAAaAAsAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAAAAAoAAQAAAAAAAAAAAAsAAQAAAAAAAAAAABAAAQAAAAAAAAAAABEAAQAAAAAAAAAAABIAAQAAAAAAAAAAABMAAQAAAAAAAAAAABQAAQAAAAAAAAABAAgAAQAAAAAAAAABAAkAAQAAAAAAAAABAAoAAQAAAAAAAAABAAsAAQAAAAAAAAABABAAAQAAAAAAAAABABEAAQAAAAAAAAABABIAAQAAAAAAAAABABMAAQAAAAAAAAABABQAAQAAAAAAAAACAAgAAQAAAAAAAAACAAkAAQAAAAAAAAACAAoAAQAAAAAAAAACAAsAAQAAAAAAAAACABAAAQAAAAAAAAACABEAAQAAAAAAAAACABIAAQAAAAAAAAACABMAAQAAAAAAAAACABQAAQAAAAAAAAADAAgAAQAAAAAAAAADAAkAAQAAAAAAAAADAAoAAQAAAAAAAAADAAsAAQAAAAAAAAADABAAAQAAAAAAAAADABEAAQAAAAAAAAADABIAAQAAAAAAAAADABMAAQAAAAAAAAADABQAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAsAAQAAAAAAAAAEABAAAQAAAAAAAAAEABEAAQAAAAAAAAAEABIAAQAAAAAAAAAEABMAAQAAAAAAAAAEABQAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAsAAQAAAAAAAAAFABAAAQAAAAAAAAAFABEAAQAAAAAAAAAFABIAAQAAAAAAAAAFABMAAQAAAAAAAAAFABQAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAoAAQAAAAAAAAAGAAsAAQAAAAAAAAAGABAAAQAAAAAAAAAGABEAAQAAAAAAAAAGABIAAQAAAAAAAAAGABMAAQAAAAAAAAAGABQAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAQAAAAAAAAAHAAsAAQAAAAAAAAAHABAAAQAAAAAAAAAHABEAAQAAAAAAAAAHABIAAQAAAAAAAAAHABMAAQAAAAAAAAAHABQAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAoAAQAAAAAAAAAIAAsAAQAAAAAAAAAIABAAAQAAAAAAAAAIABEAAQAAAAAAAAAIABIAAQAAAAAAAAAIABMAAQAAAAAAAAAIABQAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAAsAAQAAAAAAAAAJABAAAQAAAAAAAAAJABEAAQAAAAAAAAAJABIAAQAAAAAAAAAJABMAAQAAAAAAAAAJABQAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAoAAQAAAAAAAAAKAAsAAQAAAAAAAAAKABAAAQAAAAAAAAAKABEAAQAAAAAAAAAKABIAAQAAAAAAAAAKABMAAQAAAAAAAAAKABQAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAALAAsAAQAAAAAAAAALABAAAQAAAAAAAAALABEAAQAAAAAAAAALABIAAQAAAAAAAAALABMAAQAAAAAAAAALABQAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAoAAQAAAAAAAAAMAAsAAQAAAAAAAAAMABAAAQAAAAAAAAAMABEAAQAAAAAAAAAMABIAAQAAAAAAAAAMABMAAQAAAAAAAAAMABQAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQAAAAAAAAANAAsAAQAAAAAAAAANABAAAQAAAAAAAAANABEAAQAAAAAAAAANABIAAQAAAAAAAAANABMAAQAAAAAAAAANABQAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAoAAQAAAAAAAAAOAAsAAQAAAAAAAAAOABAAAQAAAAAAAAAOABEAAQAAAAAAAAAOABIAAQAAAAAAAAAOABMAAQAAAAAAAAAOABQAAQAAAAAAAAAPAAgAAwAYAAgAAAAPAAkAAQAAAAAAAAAPAAoAAQAAAAAAAAAPAAsAAQAAAAAAAAAPABAAAQAAAAAAAAAPABEAAQAAAAAAAAAPABIAAQAAAAAAAAAPABMAAQAAAAAAAAAPABQAAQAAAAAAAAAQAAgAAwAZAAYAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAsAAQAAAAAAAAAQABAAAQAAAAAAAAAQABEAAQAAAAAAAAAQABIAAQAAAAAAAAAQABMAAwAYAAYAAAAQABQAAwAYAAcAAAARAAkAAwAaAAcAAAARAAoAAwAaAAcAAAARAAsAAwAaAAcAAAARABAAAwAaAAcAAAARABEAAwAaAAcAAAARABIAAwAaAAcAAAASAAgAAAACAAEAAAASAAkAAAACAAEAAAASAAoAAAACAAEAAAASAAsAAAACAAEAAAASABAAAAACAAEAAAASABEAAAACAAEAAAASABIAAAACAAEAAAASABMAAAACAAEAAAASABQAAAACAAEAAAATAAgAAAACAAEAAAATAAkAAAACAAEAAAATAAoAAAACAAEAAAATAAsAAAACAAEAAAATABAAAAACAAEAAAATABEAAAACAAEAAAATABIAAAACAAEAAAATABMAAAACAAEAAAATABQAAAACAAEAAAAUAAkAAwAYAAcAAAAUAAoAAwAYAAcAAAAUAAsAAwAYAAcAAAAUABAAAwAYAAcAAAAUABEAAwAYAAcAAAAUABIAAwAYAAcAAAAUABQAAAACAAEAAAAVAAgAAwAZAAYAAAAVAAkAAQAAAAAAAAAVAAoAAQAAAAAAAAAVAAsAAQAAAAAAAAAVAAwAAQAAAAAAAAAVAA0AAQAAAAAAAAAVAA4AAQAAAAAAAAAVAA8AAQAAAAAAAAAVABAAAQAAAAAAAAAVABEAAQAAAAAAAAAVABIAAQAAAAAAAAAVABMAAwAaAAYAAAAWAAgAAwAaAAgAAAAWAAkAAQAAAAAAAAAWAAoAAQAAAAAAAAAWAAsAAQAAAAAAAAAWAAwAAQAAAAAAAAAWAA0AAQAAAAAAAAAWABQAAQAAAAAAAAAAAAwAAQAAAAAAAAABAAwAAQAAAAAAAAACAAwAAQAAAAAAAAADAAwAAQAAAAAAAAAEAAwAAQAAAAAAAAAFAAwAAQAAAAAAAAAGAAwAAQAAAAAAAAAHAAwAAQAAAAAAAAAIAAwAAQAAAAAAAAAJAAwAAQAAAAAAAAAKAAwAAQAAAAAAAAALAAwAAQAAAAAAAAAMAAwAAQAAAAAAAAANAAwAAQAAAAAAAAAOAAwAAQAAAAAAAAAPAAwAAQAAAAAAAAAQAAwAAQAAAAAAAAARAAwAAwAaAAcAAAATAAwAAAACAAEAAAAUAAwAAwAYAAcAAAAAAA0AAQAAAAAAAAAAAA4AAQAAAAAAAAAAAA8AAQAAAAAAAAABAA0AAQAAAAAAAAABAA4AAQAAAAAAAAABAA8AAQAAAAAAAAACAA0AAQAAAAAAAAACAA4AAQAAAAAAAAACAA8AAQAAAAAAAAADAA0AAQAAAAAAAAADAA4AAQAAAAAAAAADAA8AAQAAAAAAAAAEAA0AAQAAAAAAAAAEAA4AAQAAAAAAAAAEAA8AAQAAAAAAAAAFAA0AAQAAAAAAAAAFAA4AAQAAAAAAAAAFAA8AAQAAAAAAAAAGAA0AAQAAAAAAAAAGAA4AAQAAAAAAAAAGAA8AAQAAAAAAAAAHAA0AAQAAAAAAAAAHAA4AAQAAAAAAAAAHAA8AAQAAAAAAAAAIAA0AAQAAAAAAAAAIAA4AAQAAAAAAAAAIAA8AAQAAAAAAAAAJAA0AAQAAAAAAAAAJAA4AAQAAAAAAAAAJAA8AAQAAAAAAAAAKAA0AAQAAAAAAAAAKAA4AAQAAAAAAAAAKAA8AAQAAAAAAAAALAA0AAQAAAAAAAAALAA4AAQAAAAAAAAALAA8AAQAAAAAAAAAMAA0AAQAAAAAAAAAMAA4AAQAAAAAAAAAMAA8AAQAAAAAAAAANAA0AAQAAAAAAAAANAA4AAQAAAAAAAAANAA8AAQAAAAAAAAAOAA0AAQAAAAAAAAAOAA4AAQAAAAAAAAAOAA8AAQAAAAAAAAAPAA0AAQAAAAAAAAAPAA4AAQAAAAAAAAAPAA8AAQAAAAAAAAAQAA0AAQAAAAAAAAAQAA4AAQAAAAAAAAAQAA8AAQAAAAAAAAARAA0AAwAaAAcAAAARAA4AAwAaAAcAAAARAA8AAwAaAAcAAAATAA0AAAACAAEAAAATAA4AAAACAAEAAAATAA8AAAACAAEAAAAUAA0AAwAYAAcAAAAUAA4AAwAYAAcAAAAUAA8AAwAYAAcAAAAgAA4AAQAAAAAAAAAfAA0AAQAAAAAAAAAeAAwAAQAAAAAAAAAdAAsAAQAAAAAAAAAcAAoAAQAAAAAAAAAhAA8AAQAAAAAAAAAeAA0AAQAAAAAAAAAeAAsAAQAAAAAAAAAbAAkAAQAAAAAAAAAdAAoAAQAAAAAAAAAcAAkAAQAAAAAAAAAbAAgAAQAAAAAAAAAhAA4AAQAAAAAAAAARABQAAAACAAEAAAAVABQAAwAaAAcAAAAUABMAAwAYAAgAAAAWAA4AAQAAAAAAAAAWAA8AAQAAAAAAAAAWABAAAQAAAAAAAAAWABEAAQAAAAAAAAAWABIAAQAAAAAAAAAWABMAAQAAAAAAAAAXAA4AAQAAAAAAAAAXAA8AAQAAAAAAAAAXABAAAQAAAAAAAAAXABEAAQAAAAAAAAAXABIAAQAAAAAAAAAXABMAAQAAAAAAAAARABMAAwAaAAgAAAASAAwAAAACAAEAAAASAA0AAAACAAEAAAASAA4AAAACAAEAAAASAA8AAAACAAEAAAAUAAgAAwAYAAYAAAARAAgAAwAaAAYAAAAQABUAAwAYAAkAAAARABUAAwAYAAkAAAASABUAAwAYAAkAAAATABUAAwAYAAkAAAAUABUAAwAYAAkAAAAVABUAAwAYAAkAAAAWABUAAwAYAAkAAAAXABUAAwAYAAkAAAD/////AwAYAAkAAAD//wAAAwAYAAkAAAD//wEAAwAYAAkAAAD//wIAAwAYAAkAAAD//wMAAwAYAAkAAAD+/wMAAwAYAAkAAAD+/wQAAwAYAAkAAAD+/wUAAwAYAAkAAAD+/wYAAwAYAAkAAAD+/wcAAwAYAAkAAAD+/wgAAwAYAAkAAAD+/wkAAwAYAAkAAAD+/woAAwAYAAkAAAD+/wsAAwAYAAkAAAD+/wwAAwAYAAkAAAD+/w0AAwAYAAkAAAD+/w4AAwAYAAkAAAD+/w8AAwAYAAkAAAD+/xAAAwAYAAkAAAD+/xEAAwAYAAkAAAD+/xIAAwAYAAkAAAD+/xMAAwAYAAkAAAD+/xQAAwAYAAkAAAD//wgAAwAYAAkAAAD//wcAAwAYAAkAAAD//wYAAwAYAAkAAAD//wUAAwAYAAkAAAD//wQAAwAYAAkAAAD//wkAAwAYAAkAAAD//woAAwAYAAkAAAD//wsAAwAYAAkAAAD//wwAAwAYAAkAAAD//w0AAwAYAAkAAAD//w4AAwAYAAkAAAD//w8AAwAYAAkAAAD//xAAAwAYAAkAAAD//xEAAwAYAAkAAAD//xIAAwAYAAkAAAD//xMAAwAYAAkAAAD//xQAAwAYAAkAAAD//xUAAwAYAAkAAAAAABUAAwAYAAkAAAABABUAAwAYAAkAAAACABUAAwAYAAkAAAADABUAAwAYAAkAAAAEABUAAwAYAAkAAAAFABUAAwAYAAkAAAAGABUAAwAYAAkAAAAHABUAAwAYAAkAAAAIABUAAwAYAAkAAAAJABUAAwAYAAkAAAAKABUAAwAYAAkAAAALABUAAwAYAAkAAAAMABUAAwAYAAkAAAANABUAAwAYAAkAAAAOABUAAwAYAAkAAAAPABUAAwAYAAkAAAAYABUAAwAYAAkAAAAZABUAAwAYAAkAAAAaABUAAwAYAAkAAAAbABUAAwAYAAkAAAAcABUAAwAYAAkAAAAdABUAAwAYAAkAAAAeABUAAwAYAAkAAAAfABUAAwAYAAkAAAAgABUAAwAYAAkAAAAhABUAAwAYAAkAAAAiABUAAwAYAAkAAAAjABUAAwAYAAkAAAAkABUAAwAYAAkAAAAlABUAAwAYAAkAAAAlAP//AwAYAAkAAAAlAAAAAwAYAAkAAAAlAAEAAwAYAAkAAAAlAAIAAwAYAAkAAAAlAAMAAwAYAAkAAAAlAAQAAwAYAAkAAAAlAAUAAwAYAAkAAAAlAAYAAwAYAAkAAAAlAAcAAwAYAAkAAAAlAAgAAwAYAAkAAAAlAAkAAwAYAAkAAAAlAAoAAwAYAAkAAAAlAAsAAwAYAAkAAAAlAAwAAwAYAAkAAAAlAA0AAwAYAAkAAAAlAA4AAwAYAAkAAAAmAA4AAwAYAAkAAAAmAA8AAwAYAAkAAAAmABAAAwAYAAkAAAAmABEAAwAYAAkAAAAmABIAAwAYAAkAAAAmABMAAwAYAAkAAAAlABMAAwAYAAkAAAAlABQAAwAYAAkAAAAlABIAAwAYAAkAAAAlABEAAwAYAAkAAAAlABAAAwAYAAkAAAAlAA8AAwAYAAkAAAAAAP//AwAYAAkAAAABAP//AwAYAAkAAAABAP7/AwAYAAkAAAACAP7/AwAYAAkAAAADAP7/AwAYAAkAAAAEAP7/AwAYAAkAAAAFAP7/AwAYAAkAAAAGAP7/AwAYAAkAAAAHAP7/AwAYAAkAAAAIAP7/AwAYAAkAAAAJAP7/AwAYAAkAAAAKAP//AwAYAAkAAAALAP//AwAYAAkAAAAMAP//AwAYAAkAAAANAP//AwAYAAkAAAAIAP//AwAYAAkAAAAHAP//AwAYAAkAAAAGAP//AwAYAAkAAAAFAP//AwAYAAkAAAAEAP//AwAYAAkAAAADAP//AwAYAAkAAAACAP//AwAYAAkAAAAKAP7/AwAYAAkAAAAJAP//AwAYAAkAAAAOAP//AwAYAAkAAAAPAP//AwAYAAkAAAAQAP//AwAYAAkAAAARAP//AwAYAAkAAAASAP//AwAYAAkAAAATAP//AwAYAAkAAAAUAP//AwAYAAkAAAAVAP//AwAYAAkAAAAWAP//AwAYAAkAAAAXAP//AwAYAAkAAAAYAP//AwAYAAkAAAAZAP//AwAYAAkAAAAaAP//AwAYAAkAAAAbAP//AwAYAAkAAAAcAP//AwAYAAkAAAAdAP//AwAYAAkAAAAeAP//AwAYAAkAAAAfAP//AwAYAAkAAAAgAP//AwAYAAkAAAAhAP//AwAYAAkAAAAiAP//AwAYAAkAAAAjAP//AwAYAAkAAAAkAP//AwAYAAkAAAA=")
tile_set = ExtResource("2_7w2fx")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
z_index = -3
tile_map_data = PackedByteArray("AAAPABEAAwAdAAwAAAAMAA0AAwAdAAwAAAAPAAoAAwAdAAwAAAAXABMAAwAdAAwAAAAYAAsAAwAdAAwAAAANABEAAwAUAAwAAAAPAA4AAwAUAAwAAAAQAA8AAwATAAsAAAAMAAsAAwATAAsAAAAXABIAAwATAA4AAAAWAA0AAwATAA4AAAAWABMAAwASAA0AAAAZAA8AAwASAA0AAAAWAAsAAwASAA0AAAAWABAAAwATAAwAAAAYAA4AAwATAAwAAAAYAAwAAwATAAwAAAAPAA0AAwAMAA0AAAAJAAUAAwAMAAwAAAAbAAUAAwANAA0AAAAKAAIAAwAMAA0AAAAMAAgAAwANAA0AAAAYAAkAAwAWAAoAAAAIAAIAAwAVAAkAAAALAAUAAwAWAAoAAAAWAAoAAwAWAAkAAAALAAEAAwAWAAkAAAAaAAEAAwAXAAkAAAAeAAUAAwAWAAoAAAAdAAIAAwAWAAoAAAAcAAAAAwAVAAkAAAAdAAkAAwAHAAEAAAAGAAkAAwAGAAAAAAAHAAMAAwAGAAEAAAAKAAkAAwAGAAEAAAAcAAMAAwAGAAAAAAAHAA4AAwAGAAAAAAAXABAAAwAKAAIAAAAXABEAAwAKAAMAAAAYABAAAwALAAIAAAAYABEAAwALAAMAAAAKAAYAAwAKAAIAAAAKAAcAAwAKAAMAAAALAAYAAwALAAIAAAALAAcAAwALAAMAAAAHAAcAAwAMAAIAAAAVAA4AAwAMAAIAAAAcAAgAAwAMAAIAAAAJABAAAwAMAAEAAAAZAAYAAwAMAAEAAAAbAAEAAwAMAAEAAAAKAAAAAwAMAAEAAAANAAoAAwAQAAEAAAAaAAkAAwAPAAEAAAAbAAMAAwAOAAAAAAAOAAsAAwAQAAAAAAA=")
tile_set = ExtResource("2_7w2fx")

[node name="transition" type="AnimationPlayer" parent="."]
root_node = NodePath("ColorRect")
libraries = {
"": SubResource("AnimationLibrary_xsx1c")
}

[node name="ColorRect" type="ColorRect" parent="transition"]
visible = false
offset_right = 602.0
offset_bottom = 337.0

[node name="player" parent="." instance=ExtResource("3_58nap")]
position = Vector2(304, 326)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = -2
position = Vector2(304.25, 33.366)
scale = Vector2(0.359375, 0.293922)
sprite_frames = SubResource("SpriteFrames_d4c7i")
animation = &"portal"
frame_progress = 0.640559

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
physics_interpolation_mode = 1
position = Vector2(304, 32)
shape = SubResource("CircleShape2D_w1aok")

[node name="transition area" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="transition area"]
position = Vector2(304, 32)
shape = SubResource("CircleShape2D_7kdr2")
debug_color = Color(0.97457, 0, 0.425809, 0.42)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TutorialNPC" parent="." instance=ExtResource("5_2g06u")]
light_mask = 7
visibility_layer = 7
position = Vector2(304, 106)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="transition area" to="." method="_on_transition_area_body_entered"]
